# backend/controllers/Project/createProject.js
@@ -9,16 +9,30 @@ export default async (req, res, next) => {
   const project = { projectId, workerId: id, description }
 
   try {
+    if (!url) throw new CustomError(400, "No Url provided")
+    if (!Array.isArray(url)) throw new CustomError(400, "Urls must be in Array")
+    if (!description) throw new CustomError(400, "NO Description provided")
+
     const [rows] = await connection.query("SELECT role FROM user WHERE userId = ?", [id])
     const user = rows[0]
+
     if (user.role !== "worker") throw new CustomError(401, "Unauthorized to create projects")
-
-    await connection.query("INSERT INTO project set ? ", [project])
-    await connection.query("INSERT INTO picture set url = ?, projectId = ?", [url, projectId])
-
-    console.log("Project created! :D \n For now projectId = " + projectId)
-    return res.status(201).json({ message: "Project created!" })
   } catch (err) {
     next(err)
   }
+  const projectPictures = getProjectPictures(url, projectId)
+  try {
+    await connection.query("START TRANSACTION")
+    await connection.query("INSERT INTO project set ? ", [project])
+    await connection.query("INSERT INTO picture (url , projectId) VALUES ?", [projectPictures])
+    await connection.query("COMMIT")
+    console.log("Project created! " + projectId)
+    return res.status(201).json({ message: "Project created!", projectId })
+  } catch (err) {
+    await connection.query("ROLLBACK")
+    next(err)
+  }
+}
+const getProjectPictures = (urls, projectId) => {
+  return urls.map(url => [url, projectId])
 }
